Add for May 25, 2023

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "files.associations": {
-    "limits": "c"
+    "limits": "c",
+    "string.h": "c",
+    "stdio.h": "c",
+    "ctype.h": "c"
   }
 }
