Add for May 26, 2023

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "limits": "c",
     "string.h": "c",
     "stdio.h": "c",
-    "ctype.h": "c"
+    "ctype.h": "c",
+    "typeinfo": "c",
+    "math.h": "c"
   }
 }
