--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "stdlib.h": "c",
     "array": "c",
     "string_view": "c",
-    "initializer_list": "c"
+    "initializer_list": "c",
+    "deque": "c",
+    "vector": "c"
   }
 }
