--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "random": "c",
     "compare": "c",
     "cstdint": "c",
-    "stdint.h": "c"
+    "stdint.h": "c",
+    "string": "c"
   }
 }
