Add for July 15, 2023

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
     "cstdint": "c",
     "stdint.h": "c",
     "string": "c",
-    "time.h": "c"
+    "time.h": "c",
+    "*.tcc": "c",
+    "type_traits": "c"
   }
 }
