Add for August 24, 2023

--- a/C/.vscode/settings.json
+++ b/C/.vscode/settings.json
@@ -3,6 +3,9 @@
     "iostream": "cpp",
     "string_view": "cpp",
     "ostream": "cpp",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "cmath": "c",
+    "limits": "c",
+    "type_traits": "c"
   }
 }
